Uncomment loading screen and fix alignment in page content.

--- a/style.css
+++ b/style.css
@@ -257,7 +257,7 @@ body {
   height: 90%;
   position: relative;
   justify-content: center;
-  align-items: center;
+  align-items: start;
   display: flex;
   z-index: 3;
 }
